# HCD-Project

./: README.md  build_files.sh  db.sqlite3  manage.py  pyproject.toml  requirements.txt  vercel.json
UnunuziApp/: asgi.py  settings.py  urls.py  wsgi.py
coupons/migrations/: 0001_initial.py
ecommerce/: settings.py
order/migrations/: 0001_initial.py
shop/: urls.py  views.py
shop/migrations/: 0001_initial.py
shop/templates/shop/: home.html
shop/templates/shop/base/: base.html  navbar.html
shop/templates/shop/product/: detail.html  list.html
templates/ecom/: customer_base.html  download_invoice.html  footer.html  homebase.html  navbar.html
ununuzi/: pyvenv.cfg
ununuzi/Scripts/: activate  activate.bat  django-admin.py  prichunkpng  pricolpng  priditherpng  priforgepng  prigreypng  pripalpng  pripamtopng  priplan9topng  pripnglsch  pripngtopam  prirowpng  priweavepng  svg2pdf
