[tool.poetry]
name = "ununuziapp"
version = "0.1.0"
description = ""
authors = ["AbrahamAtorMamer <atoragau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2.0"
django-widget-tweaks = "1.4.8"
sqlparse = "0.3.1"
xhtml2pdf = "^0.2.15"
gunicorn = "^22.0.0"
dj-database-url = ">=2.1.0,<2.2.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
